1999-04-07  Pavel Roskin  <pavel_roskin@geocities.com>

	* automake.in (value_to_list): Skip trailing backslashes.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_texinfo): Add texinfo.tex to config_aux_dir
	when appropriate.
	Reported by Per Cederqvist <ceder@lysator.liu.se>
	(handle_texinfo): Do not define texinfo_tex='.', use
	'$(srcdir)/texinfo.tex' instead; the directory name will be
	properly extracted.
	(require_conf_file_with_line): Fixed typo.

1999-04-03  Raja R Harinath  <harinath@cs.umn.edu>

	* automake.in (handle_tests): Test `dir=./' before `dir=', so that 
	we do not depend on PATH starting with `.'.

1999-03-31  Tom Tromey  <tromey@cygnus.com>

	* automake.in (quote_cond_val): Quote \n.
	(unquote_cond_val): Unquote \n.
	(read_am_file): If line ends with `\', preserve it and add a
	newline.
	(read_main_am_file): In conditional case, put conditional text at
	beginning of each generated line.

1999-03-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_tests): support XFAIL_TEST
	* automake.texi: document it

1999-03-27  Tom Tromey  <tromey@cygnus.com>

	* automake.in (saw_sources_p): Correctly count header extensions
	seen.
	(handle_headers): Fixed order of arguments to am_install_var.

	* automake.in (am_install_var): Don't error if EXTRA_foo is
	defined uselessly.

	* scripts.am (install-@DIR@SCRIPTS): Use NDIR when appropriate.
	(uninstall-@DIR@SCRIPTS): Likewise.
	* progs.am (install-@DIR@PROGRAMS): Use NDIR when appropriate.
	(uninstall-@DIR@PROGRAMS): Likewise.
	* ltlib.am (install-@DIR@LTLIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LTLIBRARIES): Likewise.
	* lisp.am (install-@DIR@LISP): Use NDIR when appropriate.
	(uninstall-@DIR@LISP): Likewise.
	* libs.am (install-@DIR@LIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LIBRARIES): Likewise.
	* java.am (install-@DIR@JAVA): Use NDIR when appropriate.
	(uninstall-@DIR@JAVA): Likewise.