@@ -5550,16 +5550,13 @@ sub value_to_list
     local ($var, $val, $cond) = @_;
     local (@result);
 
+    # Strip backslashes
+    $val =~ s/\\(\n|$)/ /g;
+
     foreach (split (' ', $val))
     {
 	# If a comment seen, just leave.
 	last if /^#/;
-
-	# Strip backslashes
-	s/\\$//;
-
-	# Skip empty lines
-	next if /^$/;
 
 	# Handle variable substitutions.
 	if (/^\$\{([^}]*)\}$/ || /^\$\(([^)]*)\)$/)
