@@ -1,3 +1,7 @@
+1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* automake.in (value_to_list): Skip *only* trailing backslashes.
+
 1999-04-07  Pavel Roskin  <pavel_roskin@geocities.com>
 
 	* automake.in (value_to_list): Skip trailing backslashes.
